Mon Dec  1 13:24:15 2003  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/FT_ReplicationManager/FT_ReplicationManager.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PG_Group_Factory.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Group_Factory.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group.cpp:
          Honor initial and minimum member counts.

Mon Dec  1 09:16:28 2003  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/FT_ReplicationManager/FT_ReplicationManager.cpp:
          Move implementation details to PG_Object_Group

        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group.cpp:
          Declare remaining functions to support ReplicationManager.
          Stubbed out for now.

        * orbsvcs/orbsvcs/PortableGroup/PG_Group_Factory.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PG_ObjectGroupManager.cpp:
          Resolve linux build warnings.

Sun Nov 30 11:53:38 2003  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/orbsvcs/PortableGroup/PG_Group_Factory.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Group_Factory.cpp:
          New: support for implementing a GenericFactory for groups.

        * orbsvcs/FT_ReplicationManager/FT_ReplicationManager.h:
        * orbsvcs/FT_ReplicationManager/FT_ReplicationManager.cpp:
          Remove all dependancies on PG_PropertyManager, PG_GenericFactory,
          and PG_ObjectGroupManager.  Uses PG_Properties_Support and
          PG_Group_Factory (which uses PG_Object_Groups) instead.

        * orbsvcs/orbsvcs/PortableGroup/PG_FactoryRegistry.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_FactoryRegistry.cpp:
          Add an init method for use when it's not stand-alone.

        * orbsvcs/orbsvcs/PortableGroup/PG_ObjectGroupManager.cpp:
          Initialize Group Manipulator (probably moot since I intend
          to back out all changes to ObjectGroupManager.)
